--- a/git.css
+++ b/git.css
@@ -3,7 +3,7 @@ padding: 40px;
   color: #2F00BF;
   font-family: fantasy;
   display: flex;
-  background-color:#BBD7FB ;
+  background-color:#6DC8C1 ;
   border-collapse: collapse;
   justify-content: center;
 }
