--- a/git.css
+++ b/git.css
@@ -1,6 +1,6 @@
 table{
 padding: 40px;
-  color: #2F00BF;
+  color: #334861;
   font-family: fantasy;
   display: flex;
   background-color:#6DC8C1 ;
